# boautomate

./: .dockerignore  .gitignore  .travis.yml  ChangeLog  DESCRIPTION.rst  Makefile  README.rst  get_version.py  requirements.txt  setup.cfg  setup.py
boautomate/: __init__.py
boautomate/boautomatelib/: __init__.py  exceptions.py  executor.py  filesystem.py  ioc.py  locator.py  locks.py  logging.py  persistence.py  pipelineparser.py  plugin.py  repository.py  resolver.py  schema.py  supervisor.py  tokenmanager.py
boautomate/boautomatelib/filesystem/: README.md  __init__.py  factory.py  gitfs.py  localfs.py  multiplefs.py  templating.py
boautomate/boautomatelib/http/: README.md  __init__.py  base.py  index.py  pipeline.py
boautomate/boautomatelib/localexecutor/: __init__.py  pipeline.py
boautomate/boautomatelib/nodeexecutor/: README.md  __init__.py  context.py  pipeline.py  slack.py
boautomate/boautomatelib/payloadparser/: README.md  __init__.py  actions.py  base.py  baseparser.py  docker.py  facts.py  git.py  quay.py  slack.py
boautomate/boautomatelib/schema/: pipeline-v1-inline-config.schema.json  pipeline-v1.schema.json
boautomate/boautomatelib/supervisor/: README.md  __init__.py  base.py  dockerrun.py  factory.py  multiple.py  (+1 more)
defaults/boautomate-local/: storage.yaml  supervisor.yaml
defaults/storage/: README.rst
docker/base-image/: Dockerfile
docker/boautomate/: Dockerfile  entrypoint.py
test/: Makefile
test/payload-examples/: docker-authorization-fact.json  git-fact-with-password.json  git-fact-with-public-key.json  quay-push-event.json
(+40 files in other folders)
