[metadata]
name = boautomate
author = RiotKit Collective
author_email = marek_andrzejczak@riseup.net
summary = Webhook to Python script, with build history. A mini-CI in Python.
license = LGPLv3
description-file = DESCRIPTION.rst
home-page = https://github.com/riotkit-org/boautomate
python_requires = >=3.6
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: System :: Systems Administration

[files]
packages = boautomate

[entry_points]
console_scripts =
    boautomate = boautomate:main
